# moltabfm_pxr

./: .gitignore  ACTIVITY_MODEL_GUIDE.md  AGENTS.md  CLAUDE.md  README.md  chemeleon_fingerprint.py  environment.yaml  pyproject.toml
.github/workflows/: NB_CI.yaml
notebooks/: activity_prediction.ipynb  fm_activity_prediction.ipynb  fm_activity_prediction.py  structure_prediction.ipynb  tabfm_activity_prediction.ipynb  tabfm_activity_prediction.py
outputs/: my_tabfm_activity_submission_v1_RDKitdesc.csv  my_tabfm_ensemble_submission.csv
