[project]
name = "moltabfm-pxr"
version = "0.1.0"
description = "Tabular foundation model experiments for PXR pEC50 prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rdkit",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "numpy",
    "lightgbm",
    "tqdm",
    "fsspec",
    "datasets",
    "scipy",
    "biotite",
    "nglview",
    "mdanalysis",
    "useful-rdkit-utils @ git+https://github.com/PatWalters/useful_rdkit_utils.git@master",
    "gradio-client",
    "tabicl",
    "mordredcommunity",
    "torch",
    "transformers==4.57.3",
    "sentencepiece",
    "chemprop>=2.2.0",
]

[dependency-groups]
test = [
    "nbmake",
    "pytest-xdist",
]
